@@ -232,7 +232,7 @@ final class DDC {
                 return new BigDecimal(Float.toString(floatVal));
             case FLOAT:
             case DOUBLE:
-                return (Float.valueOf(floatVal)).doubleValue();
+                return (new Float(floatVal)).doubleValue();
             case BINARY:
                 return convertIntToBytes(Float.floatToRawIntBits(floatVal), 4);
             default:
@@ -275,7 +275,7 @@ final class DDC {
             case DOUBLE:
                 return doubleVal;
             case REAL:
-                return (Double.valueOf(doubleVal)).floatValue();
+                return (new Double(doubleVal)).floatValue();
             case INTEGER:
                 return (int) doubleVal;
             case SMALLINT: // small and tinyint returned as short
